[package]
name = "nextpass"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nextcloud-passwords-client = { git = "https://github.com/traxys/nextcloud-passwords-client" }
#nextcloud-passwords-client = { path = "../nextcloud-passwords-client" }
structopt = "0.3.15"
tokio = { version = "0.2.21", features = ["macros", "rt-core"] }
anyhow = "1.0.31"
serde_json = "1.0.55"
log = "0.4.8"
simplelog = "0.8.0"
dirs-next = "1.0.1"
