[package]
name = "nextpass"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/traxys/nextpass/"
description = """
A CLI to interract with Nextcloud passwords
"""
categories = ["api-bindings", "command-line-utilities"]
keywords = ["nextcloud", "passwords", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nextcloud-passwords-client = "0.2.0"
structopt = "0.3.15"
tokio = { version = "0.2.21", features = ["macros", "rt-core"] }
anyhow = "1.0.31"
serde_json = "1.0.55"
log = "0.4.8"
simplelog = "0.8.0"
dirs-next = "1.0.1"
serde = { version = "1.0.114", features = ["derive"] }
rust-argon2 = "0.8.2"
aes-gcm = "0.6.0"
getrandom = "0.1.14"
generic-array = { version = "0.14.2", features = ["serde"] }
base64 = "0.12.2"
rpassword = "4.0.5"
sha-1 = "0.9.1"
uuid = "0.8.1"
promptly = { version = "0.3.0", features = ["url"] }
